--- a/chat-app/static/css/chat.css
+++ b/chat-app/static/css/chat.css
@@ -194,7 +194,7 @@
 
 #chat-wrapper
 {
-    width:85%;
+    width:50%;
     height:100%;
     overflow-y: hidden;
     display:flex;
@@ -203,6 +203,15 @@
     padding-top: 0px;
     margin:20px;
 }
+#canvas-wrapper-main{
+    width:50%;
+}
+
+#canvas-wrapper{
+    display:flex;
+    flex-direction: row;
+}
+
 
 #text-area-wrapper
 {
