Fixed styling changes

--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -23,7 +23,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.2.0/fabric.all.min.js"></script>
-<link rel="stylesheet" href="../static/css/sketchpad.css">
+<link rel="stylesheet" href="../static/css/split_ui_canvas.css">
 
 <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"
 integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous">
