--- a/chat-app/static/css/split_ui_canvas.css
+++ b/chat-app/static/css/split_ui_canvas.css
@@ -33,12 +33,13 @@
 
     padding-top:20px;
     padding-bottom:20px;
-    position:absolute;
+    position: relative;
+    right:0%;
+    /* left:100%; */
     z-index: 100;
-    right:0;
+    top:30%;
     background: rgb(255, 255, 255);
-    transform: translate(-50%,-50%);
-    top:50%;
+ 
     border-radius: 10px;
     /* offset-x | offset-y | blur-radius | spread-radius | color */
     box-shadow: -2px 2px 2px 1px rgba(0, 0, 0, 0.2);
