--- a/chat-app/static/css/canvas.css
+++ b/chat-app/static/css/canvas.css
@@ -25,7 +25,7 @@
   outline:none;
   border-radius: 20px;
   z-index: 2;
-
+  
 }
 
 #strokeSilder
@@ -42,4 +42,7 @@
   z-index: 2;
 }
 
-
+#brush-size-slider{
+  transform: rotate(-90deg);
+  height: 100px;
+}
