sexy split scrreen

--- a/chat-app/templates/sketchpad.html
+++ b/chat-app/templates/sketchpad.html
@@ -27,7 +27,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
         <div id="canvas-wrapper">
 
-            <canvas style="border: 2px solid rgb(129,96,217); " height="485" width="632" id="c"></canvas>
+            <canvas style="border-left: 2px solid rgb(129,96,217); " height="485" width="632" id="c"></canvas>
             <div id="drawing-mode-options">
                
             </div>
