--- a/chat-app/static/css/split_ui_canvas.css
+++ b/chat-app/static/css/split_ui_canvas.css
@@ -1,6 +1,3 @@
-#brush-palette{
-
-}
 
 #brushes{
     list-style-type: none;
@@ -30,7 +27,7 @@
 }
 
 #brush-palette{
-
+    width: 70px;
     padding-top:20px;
     padding-bottom:20px;
     position: relative;
@@ -38,10 +35,13 @@
     /* left:100%; */
     z-index: 100;
     top:30%;
-    background: rgb(255, 255, 255);
- 
-    border-radius: 10px;
-    /* offset-x | offset-y | blur-radius | spread-radius | color */
-    box-shadow: -2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-
+    background: rgb(255, 255, 255, 0.9);
+    border-radius: 8px;
+    box-shadow: 1px 2px 2px 1px rgb(0 0 0 / 0.2);
 }
+
+
+#brush-size-slider{
+    transform: rotate(-90deg);
+    height: 110px;
+  }
