--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -115,7 +115,7 @@ Chat
 
             <div id="canvas-wrapper">
 
-                <canvas style="border: 2px solid rgb(129,96,217); " height="485" width="632" id="c"></canvas>
+                <canvas style="border-left: 2px solid rgb(0,0,0,0.1); " height="485" width="300" id="c"></canvas>
                 <div id="brush-palette">
 
                     <ul id="brushes">
